<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item android:id="@+id/menu_help"
          android:title="@string/menu_help"
          android:icon="?attr/icon_help"
          android:showAsAction="always" />
    <item
        android:id="@+id/menu_all"
        android:title="@string/menu_all"/>
    <item
        android:id="@+id/menu_usage"
        android:title="@string/menu_usage"/>
    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export"/>
    <item
        android:id="@+id/menu_import"
        android:title="@string/menu_import"/>
    <item
        android:id="@+id/menu_pro"
        android:title="@string/menu_pro"/>
    <item
        android:id="@+id/menu_report"
        android:title="@string/menu_report"/>
    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_theme"/>
    <item
        android:id="@+id/menu_template"
        android:title="@string/menu_template"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"/>

</menu>
