<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item android:id="@+id/menu_help"
          android:title="@string/menu_help"
          android:icon="?attr/icon_help"
          android:showAsAction="always" />
    <item
        android:id="@+id/menu_apply"
        android:title="@string/menu_apply"/>
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"/>
    <item
        android:id="@+id/menu_usage"
        android:title="@string/menu_usage"/>
    <item
        android:id="@+id/menu_submit"
        android:title="@string/menu_submit"
        android:visible="true"/>
    <item
        android:id="@+id/menu_fetch"
        android:title="@string/menu_fetch"
        android:visible="true"/>
    <item
        android:id="@+id/menu_application"
        android:title="@string/help_application">
        <menu>
            <item
                android:id="@+id/menu_app_launch"
                android:title="@string/menu_app_launch"/>
            <item
                android:id="@+id/menu_app_settings"
                android:title="@string/menu_app_settings"/>
            <item
                android:id="@+id/menu_app_store"
                android:title="@string/menu_app_store"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_accounts"
        android:title="@string/menu_accounts"/>
    <item
        android:id="@+id/menu_contacts"
        android:title="@string/menu_contacts"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"/>
    
</menu>
