<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:text="@string/settings_lat"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etLat"
                    android:inputType="numberDecimal|numberSigned" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_lon"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etLon"
                    android:inputType="numberDecimal|numberSigned" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="100dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@android:string/search_go" />

                <EditText
                    android:id="@+id/etSearch"
                    android:inputType="textNoSuggestions" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_mac"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etMac"
                    android:inputType="textNoSuggestions" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_imei"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etImei"
                    android:inputType="numberDecimal|textNoSuggestions"
                    android:maxLength="16" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_phone"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etPhone"
                    android:inputType="textNoSuggestions|phone" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_id"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etId"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textCapCharacters|textNoSuggestions" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_gsfid"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etGsfId"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textCapCharacters|textNoSuggestions" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_mcc"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etMcc"
                    android:inputType="numberDecimal|textNoSuggestions"
                    android:maxLength="3" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_mnc"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etMnc"
                    android:inputType="numberDecimal|textNoSuggestions"
                    android:maxLength="2" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/settings_country"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/etCountry"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:maxLength="2" />
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/cbExpert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_expert" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@android:string/ok" />
    </LinearLayout>

</ScrollView>