<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:drawableLeft="?attr/icon_used"
        android:drawablePadding="6dip"
        android:gravity="center_vertical"
        android:text="@string/help_used"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:drawableLeft="?attr/icon_granted"
        android:drawablePadding="6dip"
        android:gravity="center_vertical"
        android:text="@string/help_granted"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:drawableLeft="?attr/icon_internet"
        android:drawablePadding="6dip"
        android:gravity="center_vertical"
        android:text="@string/help_internet"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:drawableLeft="?attr/icon_frozen"
        android:drawablePadding="6dip"
        android:gravity="center_vertical"
        android:text="@string/help_frozen"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dip" >

        <View
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="?attr/color_dangerous" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:paddingLeft="6dip"
            android:text="@string/help_dangerous"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/app_help"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/app_support"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>