<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_usage_text_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_usage_text_2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_usage_text_3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dip"
            android:text="@string/title_usage_footer"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />
    </LinearLayout>

</ScrollView>