<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgIndicator"
        android:layout_width="24dip"
        android:layout_height="24dip"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/arrow_down_float" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="6dip" >

        <ImageView
            android:id="@+id/imgUsed"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:contentDescription="@string/help_used"
            android:src="?attr/icon_used" />

        <ImageView
            android:id="@+id/imgGranted"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:contentDescription="@string/help_granted"
            android:src="?attr/icon_granted" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/help_application"
        android:src="?attr/icon_info" />

    <RelativeLayout
        android:id="@+id/rlName"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:background="@drawable/list_item_pressed"
        android:clickable="true"
        android:paddingLeft="6dip" >

        <ImageView
            android:id="@+id/imgCBName"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="6dip"
            android:contentDescription="@string/title_restrict"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/imgCBName"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</LinearLayout>