<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgIndicator"
        android:layout_width="24dip"
        android:layout_height="24dip"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/arrow_down_float" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="6dip" >

        <ImageView
            android:id="@+id/imgUsed"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:contentDescription="@string/help_used"
            android:src="@drawable/used" />

        <ImageView
            android:id="@+id/imgGranted"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:contentDescription="@string/help_granted"
            android:src="@drawable/granted" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/help_application"
        android:src="@drawable/info" />

    <CheckedTextView
        android:id="@+id/ctvName"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeightSmall"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center_vertical"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>